--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
     "react-speech-recognition": "^3.9.0",
+    "react-timer-hook": "^3.0.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
