--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "generate-avatar": "^1.4.10",
+    "lorem-ipsum": "^2.0.8",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-drag-reorder": "^1.2.0",
     "react-native-paper": "^4.12.5",
